--- a/index.html
+++ b/index.html
@@ -8,13 +8,16 @@
 	<link rel="stylesheet" href="css/styles.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+	<script src="js/jquery-2.1.4.js"></script>
+	<script src="js/bluranim.js"></script>
+
 </head>
 <body>
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col-xs-1 col-sm-4 col-md-4 col-lg-4 vertical-center" ></div>
 			<div class="col-xs-1 col-sm-4 col-md-4 col-lg-4 vertical-center" >
-				<a class="logo-link" href="map/index.html"><img class="logo" src="images/impact_logo.svg" alt="IMPACT"></a>
+				<a class="logo-link" href="map/index.html"><img class="logo box" src="images/impact_logo.svg" alt="IMPACT"></a>
 			</div>
 			<div class="col-xs-1 col-sm-4 col-md-4 col-lg-4 vertical-center" ></div>
 		</div>
