--- a/map/index.html
+++ b/map/index.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 
 	<link rel="stylesheet" href="../css/map_styles.css">
+	<link href='http://fonts.googleapis.com/css?family=Roboto|Roboto+Mono' rel='stylesheet' type='text/css'>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
@@ -14,6 +15,7 @@
 	<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCXpGSodEXlo00SBlmiV1oowYqWIugZqZM">
 	</script>
 	<script type="text/javascript" src="../js/map.js"></script>
+
 	
 	
 </head>
@@ -23,12 +25,16 @@
 			<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 vertical-center no-padding" ></div>
 			<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 row text-center no-padding" >
 				<img class="title-logo vertical-center" src="../images/impact_logo.svg" alt="IMPACT">
+
 			</div>
 			<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 vertical-center no-padding" ></div>
 		</div>
+	
 	</div>
 	<div class="map-container">
 		<div  id="map-canvas"></div>
 	</div>
+
+
 </body>
 </html>
