replaced with d3 version

--- a/map/index.html
+++ b/map/index.html
@@ -4,37 +4,36 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<!-- <meta name="viewport" content="initial-scale=1.0, user-scalable=no" /> -->
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-
 	<link rel="stylesheet" href="../css/map_styles.css">
 	<link href='http://fonts.googleapis.com/css?family=Roboto|Roboto+Mono' rel='stylesheet' type='text/css'>
-
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-
-	<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCXpGSodEXlo00SBlmiV1oowYqWIugZqZM">
-	</script>
-	<script type="text/javascript" src="../js/map.js"></script>
-
-	
-	
 </head>
 <body>
-	<div class="container-fluid">
+<!--	<div class="container-fluid">
 		<div class="row ">
 			<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 vertical-center no-padding" ></div>
 			<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 row text-center no-padding" >
 				<img class="title-logo vertical-center" src="../images/impact_logo.svg" alt="IMPACT">
-
 			</div>
 			<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 vertical-center no-padding" ></div>
 		</div>
-	
 	</div>
 	<div class="map-container">
-		<div  id="map-canvas"></div>
-	</div>
+		
+	</div> -->
 
+	<div id="map"></div>
+
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+
+<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCXpGSodEXlo00SBlmiV1oowYqWIugZqZM">
+</script>
+<script src="http://d3js.org/d3.v3.min.js"  charset="utf-8"></script>
+<script src="http://libs.cartocdn.com/cartodb.js/v2/cartodb.js"></script>
+<script type="text/javascript" src="../js/map.js"></script>
 
 </body>
 </html>
