New map using d3.js and cartodb.js

--- a/map/index.html
+++ b/map/index.html
@@ -23,14 +23,10 @@
 		
 	</div> -->
 
-	<div id="map"></div>
+	<div id="map-container"></div>
 
-
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<script src="../js/jquery-2.1.4.js"></script>
 <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-
-<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCXpGSodEXlo00SBlmiV1oowYqWIugZqZM">
-</script>
 <script src="http://d3js.org/d3.v3.min.js"  charset="utf-8"></script>
 <script src="http://libs.cartocdn.com/cartodb.js/v2/cartodb.js"></script>
 <script type="text/javascript" src="../js/map.js"></script>
