--- a/map/index.html
+++ b/map/index.html
@@ -6,7 +6,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- <meta name="viewport" content="initial-scale=1.0, user-scalable=no" /> -->
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+	<link rel="stylesheet" href="http://libs.cartocdn.com/cartodb.js/v3/3.14/themes/css/cartodb.css" type="text/css" />
 	<link rel="stylesheet" href="../css/map_styles.css">
+	<link rel="stylesheet" href="../css/tipsy.css">
 	<link href='http://fonts.googleapis.com/css?family=Roboto|Roboto+Mono' rel='stylesheet' type='text/css'>
 </head>
 <body>
@@ -29,6 +31,7 @@
 <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 <script src="http://d3js.org/d3.v3.min.js"  charset="utf-8"></script>
 <script src="http://libs.cartocdn.com/cartodb.js/v2/cartodb.js"></script>
+<script src="../js/jquery.tipsy.js"></script>
 <script type="text/javascript" src="../js/map.js"></script>
 
 </body>
